2006-11-28  Mickael Remond  <mickael.remond@process-one.net>

	* src/ejabberd_c2s.erl: User login in with negative priority must not
	receive offline messages (Thanks to Badlop).

2006-11-24  Mickael Remond  <mickael.remond@process-one.net>

	* doc/guide.tex: Fixed regexp ACL configuration examples
	(Thanks to Massimiliano Mirra).
	
	* src/muc/mod_muc_room.erl: API improvement. It is now possible
	to read and write a room config from a developer module (Thanks
	to Massimiliano Mirra).

2006-11-23  Alexey Shchepin  <alexey@sevcom.net>

	* src/eldap/eldap.erl: Bugfix (thanks to Evgeniy Khramtsov)

	* src/ejabberd_sm.erl: The max_user_sessions option is now
	configured via access rule
	* src/ejabberd.cfg.example: Likewise

2006-11-20  Mickael Remond  <mickael.remond@process-one.net>

	* src/ejd2odbc.erl: Copy mod_private data from Mnesia to
	relational database.  
	* src/odbc/odbc_queries.erl: Refactoring.  
	* src/odbc/mssql.sql: Likewise.
	* doc/guide.tex: Doc updated to mention mod_private_odbc.

	* src/odbc/mysql.sql: Started integration of mod_privacy_odbc for
	MySQL and MSSQL.
	* src/odbc/mssql.sql: Likewise.
	
2006-11-15  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_muc/mod_muc_room.erl: API improvement: It is now easier to
	extract data from the MUC room process.

2006-11-07  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_node_groups.erl: Support for node tagging
	* src/ejabberd_sup.erl: Likewise
	* src/ejabberd_frontend_socket.erl: Use node tags to determine
	backend nodes
	* src/ejabberd_config.erl: Added node_type and cluster_nodes
	options
	* src/ejabberd_app.erl: Establish connections to the nodes from
	the cluster_nodes option

	* src/ejabberd_router.erl: Added balancing method option
	* src/ejabberd_config.erl: Likewise

2006-11-05  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_private_odbc.erl: Support for MySQL and MSSQL.
	* src/odbc/odbc_queries.erl: Likewise.
	* src/odbc/mysql.sql: Likewise.